[gd_scene load_steps=10 format=3 uid="uid://crtolih0stjo8"]

[ext_resource type="Script" path="res://script/scene.gd" id="1_ct4f5"]
[ext_resource type="PackedScene" uid="uid://bs3aq45n6g3gt" path="res://scene/item/exp_gem.tscn" id="2_332mv"]
[ext_resource type="PackedScene" uid="uid://dw3vhru22x0qv" path="res://scene/item/carmor_coin.tscn" id="3_rmb0o"]
[ext_resource type="PackedScene" uid="uid://76knna1ujbai" path="res://scene/weapon_arm/weapon_arm.tscn" id="4_vhs5u"]
[ext_resource type="Script" path="res://script/UI.gd" id="5_64xcc"]
[ext_resource type="PackedScene" uid="uid://dbels83ns48cr" path="res://scene/UI/stats_ui.tscn" id="6_osxhy"]
[ext_resource type="AudioStream" uid="uid://uxohg486n51q" path="res://asset/music/吸血鬼幸存者bgm.mp3" id="7_tppv3"]
[ext_resource type="Texture2D" uid="uid://p8todlyl7ob6" path="res://asset/image/back.png" id="8_c4ubn"]

[sub_resource type="AtlasTexture" id="AtlasTexture_bejm1"]
atlas = ExtResource("8_c4ubn")
region = Rect2(0, 0, 1600, 1000)

[node name="Scene" type="Node2D"]
script = ExtResource("1_ct4f5")
expGemScene = ExtResource("2_332mv")
coinScene = ExtResource("3_rmb0o")
weaponArmScene = ExtResource("4_vhs5u")

[node name="WaveTimer" type="Timer" parent="."]
one_shot = true

[node name="EnemyGenerateTimer" type="Timer" parent="."]
one_shot = true

[node name="UI" type="CanvasLayer" parent="."]
process_mode = 3
script = ExtResource("5_64xcc")

[node name="Container" type="CenterContainer" parent="UI"]
custom_minimum_size = Vector2(1920, 1080)
mouse_filter = 2

[node name="StatsUI" parent="UI" instance=ExtResource("6_osxhy")]

[node name="HBoxContainer" type="HBoxContainer" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0
theme_override_constants/separation = 20

[node name="Label3" type="Label" parent="UI/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 30
text = "按 B 打开背包"

[node name="Label2" type="Label" parent="UI/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 30
text = "按 M 打开能力点"

[node name="Bullet" type="Node2D" parent="."]

[node name="Enemy" type="Node2D" parent="."]

[node name="Item" type="Node2D" parent="."]

[node name="Effect" type="Node2D" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_tppv3")
autoplay = true

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(3200, 2000)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
texture_repeat = 2
position = Vector2(1600, 1000)
scale = Vector2(2, 2)
texture = SubResource("AtlasTexture_bejm1")

[connection signal="timeout" from="WaveTimer" to="." method="_on_wave_timer_timeout"]
[connection signal="timeout" from="EnemyGenerateTimer" to="." method="_on_enemy_generate_timer_timeout"]
[connection signal="close_board" from="UI" to="." method="_on_ui_close_board"]
[connection signal="open_ability_board" from="UI" to="." method="_on_ui_open_ability_board"]
[connection signal="open_bag_board" from="UI" to="." method="_on_ui_open_bag_board"]
